// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/composer/extract extractPackageFile() extracts dependencies with lock file 1`] = `
Object {
  "composerLock": "composer.lock",
  "deps": Array [
    Object {
      "currentValue": ">=5.3.2",
      "depName": "php",
      "depType": "require",
      "purl": "pkg:packagist/php",
      "skipReason": "unsupported",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "symfony/assetic-bundle",
      "depType": "require",
      "purl": "pkg:packagist/symfony/assetic-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "symfony/monolog-bundle",
      "depType": "require",
      "purl": "pkg:packagist/symfony/monolog-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "symfony/swiftmailer-bundle",
      "depType": "require",
      "purl": "pkg:packagist/symfony/swiftmailer-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "2.1.*",
      "depName": "symfony/symfony",
      "depType": "require",
      "purl": "pkg:packagist/symfony/symfony",
    },
    Object {
      "currentValue": "2.2.2",
      "depName": "doctrine/common",
      "depType": "require",
      "purl": "pkg:packagist/doctrine/common",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "doctrine/doctrine-bundle",
      "depType": "require",
      "purl": "pkg:packagist/doctrine/doctrine-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "doctrine/doctrine-fixtures-bundle",
      "depType": "require",
      "purl": "pkg:packagist/doctrine/doctrine-fixtures-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "2.2.x-dev",
      "depName": "doctrine/orm",
      "depType": "require",
      "purl": "pkg:packagist/doctrine/orm",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "exercise/elastica-bundle",
      "depType": "require",
      "purl": "pkg:packagist/exercise/elastica-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "friendsofsymfony/rest-bundle",
      "depType": "require",
      "purl": "pkg:packagist/friendsofsymfony/rest-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "*",
      "depName": "friendsofsymfony/user-bundle",
      "depType": "require",
      "purl": "pkg:packagist/friendsofsymfony/user-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "fzaninotto/faker",
      "depType": "require",
      "purl": "pkg:packagist/fzaninotto/faker",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "1.0.1",
      "depName": "jms/di-extra-bundle",
      "depType": "require",
      "purl": "pkg:packagist/jms/di-extra-bundle",
    },
    Object {
      "currentValue": "*",
      "depName": "jms/payment-core-bundle",
      "depType": "require",
      "purl": "pkg:packagist/jms/payment-core-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "1.1.0",
      "depName": "jms/security-extra-bundle",
      "depType": "require",
      "purl": "pkg:packagist/jms/security-extra-bundle",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "knplabs/knp-menu-bundle",
      "depType": "require",
      "purl": "pkg:packagist/knplabs/knp-menu-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "knplabs/knp-paginator-bundle",
      "depType": "require",
      "purl": "pkg:packagist/knplabs/knp-paginator-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "liip/imagine-bundle",
      "depType": "require",
      "purl": "pkg:packagist/liip/imagine-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "merk/dough-bundle",
      "depType": "require",
      "purl": "pkg:packagist/merk/dough-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "sensio/distribution-bundle",
      "depType": "require",
      "purl": "pkg:packagist/sensio/distribution-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "sensio/framework-extra-bundle",
      "depType": "require",
      "purl": "pkg:packagist/sensio/framework-extra-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "sensio/generator-bundle",
      "depType": "require",
      "purl": "pkg:packagist/sensio/generator-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "simplethings/entity-audit-bundle",
      "depType": "require",
      "purl": "pkg:packagist/simplethings/entity-audit-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "stof/doctrine-extensions-bundle",
      "depType": "require",
      "purl": "pkg:packagist/stof/doctrine-extensions-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "twig/extensions",
      "depType": "require",
      "purl": "pkg:packagist/twig/extensions",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "2.3.*",
      "depName": "behat/behat",
      "depType": "require-dev",
      "purl": "pkg:packagist/behat/behat",
    },
    Object {
      "currentValue": "*",
      "depName": "behat/behat-bundle",
      "depType": "require-dev",
      "purl": "pkg:packagist/behat/behat-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "behat/mink-bundle",
      "depType": "require-dev",
      "purl": "pkg:packagist/behat/mink-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "behat/sahi-client",
      "depType": "require-dev",
      "purl": "pkg:packagist/behat/sahi-client",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "behat/common-contexts",
      "depType": "require-dev",
      "purl": "pkg:packagist/behat/common-contexts",
      "skipReason": "any-version",
    },
  ],
}
`;

exports[`lib/manager/composer/extract extractPackageFile() extracts dependencies with no lock file 1`] = `
Object {
  "composerLock": false,
  "deps": Array [
    Object {
      "currentValue": ">=5.3.2",
      "depName": "php",
      "depType": "require",
      "purl": "pkg:packagist/php",
      "skipReason": "unsupported",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "symfony/assetic-bundle",
      "depType": "require",
      "purl": "pkg:packagist/symfony/assetic-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "symfony/monolog-bundle",
      "depType": "require",
      "purl": "pkg:packagist/symfony/monolog-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "symfony/swiftmailer-bundle",
      "depType": "require",
      "purl": "pkg:packagist/symfony/swiftmailer-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "2.1.*",
      "depName": "symfony/symfony",
      "depType": "require",
      "purl": "pkg:packagist/symfony/symfony",
    },
    Object {
      "currentValue": "2.2.2",
      "depName": "doctrine/common",
      "depType": "require",
      "purl": "pkg:packagist/doctrine/common",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "doctrine/doctrine-bundle",
      "depType": "require",
      "purl": "pkg:packagist/doctrine/doctrine-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "doctrine/doctrine-fixtures-bundle",
      "depType": "require",
      "purl": "pkg:packagist/doctrine/doctrine-fixtures-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "2.2.x-dev",
      "depName": "doctrine/orm",
      "depType": "require",
      "purl": "pkg:packagist/doctrine/orm",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "exercise/elastica-bundle",
      "depType": "require",
      "purl": "pkg:packagist/exercise/elastica-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "friendsofsymfony/rest-bundle",
      "depType": "require",
      "purl": "pkg:packagist/friendsofsymfony/rest-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "*",
      "depName": "friendsofsymfony/user-bundle",
      "depType": "require",
      "purl": "pkg:packagist/friendsofsymfony/user-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "fzaninotto/faker",
      "depType": "require",
      "purl": "pkg:packagist/fzaninotto/faker",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "1.0.1",
      "depName": "jms/di-extra-bundle",
      "depType": "require",
      "purl": "pkg:packagist/jms/di-extra-bundle",
    },
    Object {
      "currentValue": "*",
      "depName": "jms/payment-core-bundle",
      "depType": "require",
      "purl": "pkg:packagist/jms/payment-core-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "1.1.0",
      "depName": "jms/security-extra-bundle",
      "depType": "require",
      "purl": "pkg:packagist/jms/security-extra-bundle",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "knplabs/knp-menu-bundle",
      "depType": "require",
      "purl": "pkg:packagist/knplabs/knp-menu-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "knplabs/knp-paginator-bundle",
      "depType": "require",
      "purl": "pkg:packagist/knplabs/knp-paginator-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "liip/imagine-bundle",
      "depType": "require",
      "purl": "pkg:packagist/liip/imagine-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "merk/dough-bundle",
      "depType": "require",
      "purl": "pkg:packagist/merk/dough-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "sensio/distribution-bundle",
      "depType": "require",
      "purl": "pkg:packagist/sensio/distribution-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "sensio/framework-extra-bundle",
      "depType": "require",
      "purl": "pkg:packagist/sensio/framework-extra-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "sensio/generator-bundle",
      "depType": "require",
      "purl": "pkg:packagist/sensio/generator-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "simplethings/entity-audit-bundle",
      "depType": "require",
      "purl": "pkg:packagist/simplethings/entity-audit-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "stof/doctrine-extensions-bundle",
      "depType": "require",
      "purl": "pkg:packagist/stof/doctrine-extensions-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "depName": "twig/extensions",
      "depType": "require",
      "purl": "pkg:packagist/twig/extensions",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "2.3.*",
      "depName": "behat/behat",
      "depType": "require-dev",
      "purl": "pkg:packagist/behat/behat",
    },
    Object {
      "currentValue": "*",
      "depName": "behat/behat-bundle",
      "depType": "require-dev",
      "purl": "pkg:packagist/behat/behat-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "behat/mink-bundle",
      "depType": "require-dev",
      "purl": "pkg:packagist/behat/mink-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "behat/sahi-client",
      "depType": "require-dev",
      "purl": "pkg:packagist/behat/sahi-client",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "behat/common-contexts",
      "depType": "require-dev",
      "purl": "pkg:packagist/behat/common-contexts",
      "skipReason": "any-version",
    },
  ],
}
`;

exports[`lib/manager/composer/extract extractPackageFile() extracts object registryUrls 1`] = `
Object {
  "composerJsonType": "project",
  "composerLock": false,
  "deps": Array [
    Object {
      "currentValue": ">=5.5",
      "depName": "php",
      "depType": "require",
      "purl": "pkg:packagist/php",
      "skipReason": "unsupported",
    },
    Object {
      "currentValue": "~1.0.12",
      "depName": "composer/installers",
      "depType": "require",
      "purl": "pkg:packagist/composer/installers",
    },
    Object {
      "currentValue": "*",
      "depName": "johnpbloch/wordpress",
      "depType": "require",
      "purl": "pkg:packagist/johnpbloch/wordpress",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "^2.0.1",
      "depName": "vlucas/phpdotenv",
      "depType": "require",
      "purl": "pkg:packagist/vlucas/phpdotenv",
    },
    Object {
      "currentValue": "^1.0",
      "depName": "oscarotero/env",
      "depType": "require",
      "purl": "pkg:packagist/oscarotero/env",
    },
    Object {
      "currentValue": "*",
      "depName": "wpackagist-plugin/tinymce-advanced",
      "depType": "require",
      "purl": "pkg:packagist/wpackagist-plugin/tinymce-advanced",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "wpackagist-plugin/acf-content-analysis-for-yoast-seo",
      "depType": "require",
      "purl": "pkg:packagist/wpackagist-plugin/acf-content-analysis-for-yoast-seo",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "wpackagist-plugin/duplicate-post",
      "depType": "require",
      "purl": "pkg:packagist/wpackagist-plugin/duplicate-post",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "wpackagist-plugin/simple-image-sizes",
      "depType": "require",
      "purl": "pkg:packagist/wpackagist-plugin/simple-image-sizes",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "wpackagist-plugin/wordpress-seo",
      "depType": "require",
      "purl": "pkg:packagist/wpackagist-plugin/wordpress-seo",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "wpackagist-plugin/timber-library",
      "depType": "require",
      "purl": "pkg:packagist/wpackagist-plugin/timber-library",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "wp-sync-db/wp-sync-db",
      "depType": "require",
      "purl": "pkg:packagist/wp-sync-db/wp-sync-db",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "asha23/wp-seed-timber",
      "depType": "require",
      "purl": "pkg:packagist/asha23/wp-seed-timber",
      "skipReason": "any-version",
    },
  ],
  "registryUrls": Array [
    Object {
      "type": "composer",
      "url": "https://wpackagist.org",
    },
    Object {
      "package": Object {
        "dist": Object {
          "type": "zip",
          "url": "https://github.com/asha23/wp-seed-timber/archive/v1.2.6.zip",
        },
        "name": "asha23/wp-seed-timber",
        "type": "wordpress-theme",
        "version": "1.2.6",
      },
      "type": "package",
    },
    Object {
      "package": Object {
        "dist": Object {
          "type": "zip",
          "url": "https://github.com/corysimmons/wp-sync-db/archive/1.6.zip",
        },
        "name": "wp-sync-db/wp-sync-db",
        "type": "wordpress-plugin",
        "version": "1.5",
      },
      "type": "package",
    },
  ],
}
`;

exports[`lib/manager/composer/extract extractPackageFile() extracts registryUrls 1`] = `
Object {
  "composerLock": false,
  "deps": Array [
    Object {
      "currentValue": "*",
      "depName": "aws/aws-sdk-php",
      "depType": "require",
      "purl": "pkg:packagist/aws/aws-sdk-php",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "dev-trunk",
      "depName": "wpackagist-plugin/akismet",
      "depType": "require",
      "purl": "pkg:packagist/wpackagist-plugin/akismet",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": ">=7.0.2",
      "depName": "wpackagist-plugin/wordpress-seo",
      "depType": "require",
      "purl": "pkg:packagist/wpackagist-plugin/wordpress-seo",
    },
    Object {
      "currentValue": "*",
      "depName": "wpackagist-theme/hueman",
      "depType": "require",
      "purl": "pkg:packagist/wpackagist-theme/hueman",
      "skipReason": "any-version",
    },
  ],
  "registryUrls": Array [
    Object {
      "type": "composer",
      "url": "https://wpackagist.org",
    },
  ],
}
`;
